infra/kubernetes/argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argo-cd
  annotations:
    cert-manager.io/cluster-issuer: issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.lab.naimaosmann.com
      secretName: argocd-ingress-tls
  rules:
  - host: argocd.lab.naimaosmann.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-cd-argocd-server
            port:
              name: https
